--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "python-ai-agent-frameworks-demos",
-    "image": "mcr.microsoft.com/devcontainers/python:3.12-bullseye",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": ".."
+    },
     "features": {
         "ghcr.io/azure/azure-dev/azd:latest": {}
     },
@@ -8,13 +11,11 @@
         "vscode": {
             "extensions": [
                 "ms-python.python",
-                "ms-azuretools.azure-dev",
                 "ms-azuretools.vscode-bicep"
             ],
             "python.defaultInterpreterPath": "/usr/local/bin/python"
         }
     },
-    "postCreateCommand": "pip install -r requirements.txt",
     "remoteUser": "vscode",
     "hostRequirements": {
         "memory": "8gb"
